--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/typeorm": "^10.0.1",
     "@types/cls-hooked": "^4.3.8",
     "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "cls-hooked": "^4.2.2",
     "moment-timezone": "^0.5.44",
     "pg": "^8.11.3",
